--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,18 +1,95 @@
-.body { 
-padding: 0;
-margin: 0;
-display: flex;
-justify-content: center;
-align-items: center;
-min-height: 100vh;
-user-select: none;
-background: #ecf0f3;
-}
 
-.container {
-    margin-left: 1.8em;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 13px 13px 20px #cbced1,
-        -13px -13px 20px #ffffff;
-}
+body{
+        padding: 0;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        user-select: none;
+        background: #837d7d;
+    }
+
+    .container {
+        margin-left: 1.8em;
+        padding: 20px;
+        border-radius: 22px;
+        box-shadow: 13px 13px 20px #0c0c0c,
+            -13px -13px 20px #580c42e1;
+    }
+
+    .content {
+        width: 100%;
+        margin-top: 1.7em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .row button {
+        width: 60px;
+        height: 30px;
+        font-size: 16px;
+        border: none;
+        outline: none;
+        margin: 5px;
+        border-radius: 4px;
+        transition: .1s;
+        box-shadow: 5px 5px 8px #858585,
+            -5px -5px 8px rgb(127, 126, 128);
+    }
+
+    .row button:hover {
+        box-shadow: inset 5px 5px 8px rgba(228, 228, 228, 0.1),
+            inset -5px -5px 8px rgb(255, 255, 255);
+        background: rgb(255, 255, 255);
+    }
+
+    .display #screen {
+        margin-bottom: .5em;
+        width: auto;
+        height: 70px;
+        font-size: 35px;
+        outline: none;
+        border: none;
+        text-align: right;
+        padding-right: .5em;
+        background: #ffffff;
+        border-radius: 6px;
+        box-shadow: inset 8px 8px 8px #9b9b9b,
+            inset -8px -8px 8px #b6b6b6;
+    }
+
+    #eval {
+        background: #33ccff;
+        color: #fff;
+        box-shadow: inset 5px 5px 8px #66d9ff,
+            inset -5px -5px 8px #00ace6;
+    }
+
+    #eval:hover {
+        box-shadow: inset 5px 5px 8px #00ace6,
+            inset -5px -5px 8px #00ace6;
+    }
+
+    #ac {
+        background: #33cc33;
+        color: #fff;
+    }
+
+    #ac:hover {
+        box-shadow: inset 5px 5px 8px #2eb82e,
+            inset -5px -5px 8px #33cc33;
+    }
+
+    #ce {
+        background: #ff3333;
+        color: #fff;
+    }
+
+    #ce:hover {
+        box-shadow: inset 5px 5px 8px #e60000,
+            inset -5px -5px 8px #ff3333;
+    }
+
